--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>VersaLearn</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
-      MathJax = { tex: { inlineMath: [['$', '$']] } };
+      MathJax = {
+        tex: {
+          inlineMath: [['\\(', '\\)']],
+          displayMath: [['$$', '$$'], ['\\[', '\\]']]
+        }
+      };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
 </head>
@@ -14,6 +19,7 @@
     <header><h1>VersaLearn</h1><button class="menu-toggle" onclick="toggleSidebar()">&#9776;</button></header>
     <div class='main-content-full'><h1>Available Courses</h1><div class='module-grid'><a href='kinematics-dynamic-and-control-of-robot/module-1.html' class='module-card'><h2>Kinematics, Dynamic and Control of Robot</h2><p>A rigorous introduction to the science of robotics, covering the kinematics, dynamics, and intelligent control of both robotic arms and autonomous mobile platforms.</p></a></div></div>
     <script src="assets/js/quiz.js"></script>
+    
     
 </body>
 </html>
