--- a/kinematics-dynamic-and-control-of-robot/module-1.html
+++ b/kinematics-dynamic-and-control-of-robot/module-1.html
@@ -6,7 +6,12 @@
     <title>Module 1 | Kinematics, Dynamic and Control of Robot</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <script>
-      MathJax = { tex: { inlineMath: [['$', '$']] } };
+      MathJax = {
+        tex: {
+          inlineMath: [['\\(', '\\)']],
+          displayMath: [['$$', '$$'], ['\\[', '\\]']]
+        }
+      };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
 </head>
@@ -14,7 +19,7 @@
     <header><h1><a href='../index.html' style='color: #fff; text-decoration: none;'>Kinematics, Dynamic and Control of Robot</a></h1><button class="menu-toggle" onclick="toggleSidebar()">&#9776;</button></header>
         <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
     <div class="container">
-        <aside class="sidebar"><nav class='sidebar-nav'><ul><li class='module-item active'><a href='module-1.html'>Module 1: Introduction To Robotics</a><ul class='topic-list'><li><a href='#topic-2'>Introduction to Robotics</a></li><li><a href='#topic-3'>Brief History of Robotics</a></li><li><a href='#topic-4'>Types of Robot</a></li></ul></li></ul></nav></aside>
+        <aside class="sidebar"><nav class='sidebar-nav'><ul><li class='module-item active'><a href='module-1.html'>Module 1: Introduction To Robotics</a><ul class='topic-list'><li><a href='#topic-2'>Introduction to Robotics</a></li><li><a href='#topic-3'>Brief History of Robotics</a></li><li><a href='#topic-4'>Types of Robot</a></li><li><a href='#topic-5'>Degrees of Freedom (DOF))</a></li><li><a href='#topic-6'>Interactive Lab: Degrees of Freedom</a></li></ul></li></ul></nav></aside>
         <main class="main-content"><div class='topic-section' id='topic-2'><h1>Introduction to Robotics</h1><div class='topic-content'><h2>Robot</h2>
 <p><span class="selected"><img src="../assets/images/Karel-capek_1754235905976.jpg" alt="" width="103" height="147"></span></p>
 <p><em><span class="selected">Karel Čapek</span></em></p>
@@ -227,10 +232,73 @@
     <div class="quiz-body"></div>
     <script type="application/json" class="quiz-data">[{"id":9,"questionText":"A robot designed with high rigidity in the vertical direction but compliance in the horizontal plane, making it ideal for high-speed assembly, is known as a:","imageUrl":null,"topicId":null,"options":[{"id":37,"optionText":"Articulated Robot","imageUrl":null,"correct":false},{"id":38,"optionText":"Cartesian Robot","imageUrl":null,"correct":false},{"id":39,"optionText":"SCARA Robot","imageUrl":null,"correct":true},{"id":40,"optionText":"Parallel Manipulator","imageUrl":null,"correct":false}]},{"id":10,"questionText":"Which type of robot is characterized by closed-loop kinematic chains, offering high speed and accuracy for tasks like pick-and-place?","imageUrl":null,"topicId":null,"options":[{"id":41,"optionText":"Delta Robot (a type of Parallel Manipulator)","imageUrl":null,"correct":true},{"id":42,"optionText":"PUMA Robot (a type of Articulated Robot)","imageUrl":null,"correct":false},{"id":43,"optionText":"Legged Robot","imageUrl":null,"correct":false},{"id":44,"optionText":"Gantry Robot","imageUrl":null,"correct":false}]},{"id":11,"questionText":"What is the primary advantage of a legged robot compared to a wheeled mobile robot (WMR)?","imageUrl":null,"topicId":null,"options":[{"id":45,"optionText":"Higher energy efficiency on flat surfaces.","imageUrl":null,"correct":false},{"id":46,"optionText":"Ability to traverse complex and unstructured terrain.","imageUrl":null,"correct":true},{"id":47,"optionText":"Simpler mechanical design.","imageUrl":null,"correct":false},{"id":48,"optionText":"Higher top speed on roads.","imageUrl":null,"correct":false}]},{"id":12,"questionText":"A quadcopter is a subtype of which major robot category?","imageUrl":null,"topicId":null,"options":[{"id":49,"optionText":"Manipulators","imageUrl":null,"correct":false},{"id":50,"optionText":"Mobile Robots","imageUrl":null,"correct":false},{"id":51,"optionText":"Humanoid Robots","imageUrl":null,"correct":false},{"id":52,"optionText":"Aerial Robots","imageUrl":null,"correct":true}]}]</script>
 </div>
+</div><div class='topic-section' id='topic-5'><h1>Degrees of Freedom (DOF))</h1><div class='topic-content'><p><span class="selected">Before we can analyze the motion of a robot, we must first quantify its capacity for motion. This is done using the concept of </span><strong><span class="selected">Degrees of Freedom (DOF)</span></strong><span class="selected">.</span></p>
+<blockquote>
+<p><span class="selected">The </span><strong><span class="selected">Degrees of Freedom (DOF)</span></strong><span class="selected"> of a body is the number of independent parameters required to completely specify its configuration (position and orientation) in space.</span></p>
+</blockquote>
+<p><span class="selected">The DOF of a robot's end-effector determines its ability to reach different points and achieve different orientations. The number of joints in a manipulator is often referred to as its degrees of freedom, as each joint typically provides one independent parameter of motion.</span></p>
+<p><span class="selected">Let's build this concept from a simple point to a full rigid body.</span></p>
+<ul>
+<li>
+<p><strong><span class="selected">DOF of a Point:</span></strong><span class="selected"> A point is a geometric entity with no size or orientation. We only need to specify its position.</span></p>
+<ul>
+<li>
+<p><span class="selected">In </span><strong><span class="selected">1D space</span></strong><span class="selected"> (a line), a point can only move along that line. Its position can be described by a single variable (e.g.,\((x,y)\))</span><span class="selected">. Therefore, it has </span><strong><span class="selected">1 DOF</span></strong><span class="selected">.</span></p>
+</li>
+<li>
+<p><span class="selected">In </span><strong><span class="selected">2D space</span></strong><span class="selected"> (a plane), a point's position is described by two coordinates (e.g., \((x,y)\))</span><span class="selected">. Therefore, it has </span><strong><span class="selected">2 DOF</span></strong><span class="selected">.</span></p>
+</li>
+<li>
+<p><span class="selected">In </span><strong><span class="selected">3D space</span></strong><span class="selected">, a point's position is described by three coordinates (e.g., \((x,y)\)</span><span class="selected">). Therefore, it has </span><strong><span class="selected">3 DOF</span></strong><span class="selected">.</span></p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong><span class="selected">DOF of a Rigid Body:</span></strong><span class="selected"> A rigid body is an object of a fixed size and shape. Unlike a point, we must specify not only its position but also its </span><strong><span class="selected">orientation</span></strong><span class="selected">.</span></p>
+<ul>
+<li>
+<p><strong><span class="selected">In 2D Space (Planar):</span></strong><span class="selected"> Consider a flat object moving on a tabletop. To specify its configuration, we need to know the position of a reference point on the object (2 parameters: $</span><span class="base"><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mord mathnormal">y</span><span class="mclose">)$</span></span><span class="selected">) and its angle of rotation about an axis perpendicular to the plane (1 parameter: $\theta</span><span class="mord mathnormal">$</span><span class="selected">).</span></p>
+<ul>
+<li>
+<p><span class="selected">Total DOF = 2 (for position) + 1 (for orientation) = </span><strong><span class="selected">3 DOF</span></strong><span class="selected">.</span></p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong><span class="selected">In 3D Space:</span></strong><span class="selected"> This is the most general case for robotics. To specify the configuration of a rigid body in 3D space, we need:</span></p>
+<ul>
+<li>
+<p><strong><span class="selected">3 parameters for position:</span></strong><span class="selected"> The $</span><span class="base"><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mord mathnormal">y</span><span class="mpunct">,</span><span class="mord mathnormal">z</span><span class="mclose">)$</span></span><span class="selected"> coordinates of a reference point on the body.</span></p>
+</li>
+<li>
+<p><strong><span class="selected">3 parameters for orientation:</span></strong><span class="selected"> Describing the body's rotation in space. This is more complex than the 2D case. While there are many ways to represent 3D orientation (e.g., Euler angles, quaternions), it can be proven that three independent parameters are required. Common conventions include describing rotations about three principal axes (e.g., roll, pitch, and yaw).</span></p>
+</li>
+<li>
+<p><span class="selected">Total DOF = 3 (for position) + 3 (for orientation) = </span><strong><span class="selected">6 DOF</span></strong><span class="selected">.</span></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p><span class="selected">This value is fundamental: </span><strong><span class="selected">an unconstrained rigid body in 3D space has 6 degrees of freedom.</span></strong><span class="selected"> This means that for a general-purpose robotic manipulator to be able to place its end-effector in any arbitrary position and orientation within its workspace, it must have at least 6 degrees of freedom.</span></p></div></div><div class='topic-section' id='topic-6'><h1>Interactive Lab: Degrees of Freedom</h1><div class='topic-content'><p>This is an interactive tool for you to get a grasp on the concept of degrees of freedom.</p></div><div class="simulator-wrapper">
+    <div id="canvas-container"></div>
+    <div class="controls">
+        <h2>Select Scenario</h2>
+        <div><label><input type="radio" name="dof-mode" value="point-1d" checked> Point on a Line (1 DOF)</label></div>
+        <div><label><input type="radio" name="dof-mode" value="point-2d"> Point in a Plane (2 DOF)</label></div>
+        <div><label><input type="radio" name="dof-mode" value="body-2d"> Rigid Body in a Plane (3 DOF)</label></div>
+        <div id="info-box">
+            <h3 id="info-title">Point on a Line</h3>
+            <p id="info-text">You can only move the point along the horizontal (X) axis. This is <strong>1 Degree of Freedom</strong> (Translation in X).</p>
+        </div>
+    </div>
+</div>
 </div></main>
     </div>
 
     <script src="../assets/js/quiz.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script><script src="../assets/js/dof-simulator.js"></script>
     <script>
 function toggleSidebar() {
     document.querySelector('.sidebar').classList.toggle('open');
