updated the simulator for mobile experience

--- a/kinematics-dynamic-and-control-of-robot/module-1.html
+++ b/kinematics-dynamic-and-control-of-robot/module-1.html
@@ -288,6 +288,7 @@
         <div><label><input type="radio" name="dof-mode" value="point-1d" checked> Point on a Line (1 DOF)</label></div>
         <div><label><input type="radio" name="dof-mode" value="point-2d"> Point in a Plane (2 DOF)</label></div>
         <div><label><input type="radio" name="dof-mode" value="body-2d"> Rigid Body in a Plane (3 DOF)</label></div>
+        <div id="rotate-control" style="display: none;"><label><input type="checkbox" id="rotate-mode-checkbox"> Rotate Mode</label></div>
         <div id="info-box">
             <h3 id="info-title">Point on a Line</h3>
             <p id="info-text">You can only move the point along the horizontal (X) axis. This is <strong>1 Degree of Freedom</strong> (Translation in X).</p>
