bug fixed in dof simulator

--- a/kinematics-dynamic-and-control-of-robot/module-1.html
+++ b/kinematics-dynamic-and-control-of-robot/module-1.html
@@ -279,7 +279,7 @@
     </div>
 
     <script src="../assets/js/quiz.js"></script>
-    <script src="[https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js](https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js)"></script><script src="../assets/js/dof-simulator.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script><script src="../assets/js/dof-simulator.js"></script>
     <script>
 function toggleSidebar() {
     document.querySelector('.sidebar').classList.toggle('open');
